[add] ユーザーの登録数を確認できるように変更
